{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 19,
  "lineage": "a1ccb44a-cdd0-eda3-7655-56646159f769",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "flask_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:internet-gateway/igw-0185ac8ea2f63575e",
            "id": "igw-0185ac8ea2f63575e",
            "owner_id": "971422694781",
            "tags": {
              "Name": "flask-igw"
            },
            "tags_all": {
              "Name": "flask-igw"
            },
            "vpc_id": "vpc-085ee8b6abfca2231"
          },
          "dependencies": [
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:route-table/rtb-04a368393479a6b34",
            "id": "rtb-04a368393479a6b34",
            "owner_id": "971422694781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0185ac8ea2f63575e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flask-public-rt"
            },
            "tags_all": {
              "Name": "flask-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-085ee8b6abfca2231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.flask_igw",
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056c70fd6ac53251b",
            "route_table_id": "rtb-04a368393479a6b34",
            "subnet_id": "subnet-04e03782a378d7c37"
          },
          "dependencies": [
            "aws_internet_gateway.flask_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:security-group/sg-05dc3949bb1da59ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dc3949bb1da59ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250216144052645900000005",
            "name_prefix": "terraform-",
            "owner_id": "971422694781",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask-security-group"
            },
            "tags_all": {
              "Name": "flask-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-085ee8b6abfca2231"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:subnet/subnet-0d0fa36711cc864b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0fa36711cc864b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422694781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-private-subnet"
            },
            "tags_all": {
              "Name": "flask-private-subnet"
            },
            "vpc_id": "vpc-085ee8b6abfca2231"
          },
          "dependencies": [
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:subnet/subnet-04e03782a378d7c37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e03782a378d7c37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422694781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flask-public-subnet"
            },
            "tags_all": {
              "Name": "flask-public-subnet"
            },
            "vpc_id": "vpc-085ee8b6abfca2231"
          },
          "dependencies": [
            "aws_vpc.flask_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flask_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:971422694781:vpc/vpc-085ee8b6abfca2231",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b8828333e94aed5",
            "default_route_table_id": "rtb-04c7729ae9fd15d37",
            "default_security_group_id": "sg-0d749d4bdd25180be",
            "dhcp_options_id": "dopt-0f5bbe1ae5c9e098e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085ee8b6abfca2231",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c7729ae9fd15d37",
            "owner_id": "971422694781",
            "tags": {
              "Name": "flask-vpc"
            },
            "tags_all": {
              "Name": "flask-vpc"
            }
          }
        }
      ]
    }
  ]
}